[workspace]
members = [
    "rosrust",
    "rosrust_codegen",
    "rosrust_codegen_internal",
    "rosrust_msg",
    "rosrust_actionlib",
    "rosrust_diagnostics",
    "rosrust_rospack",
    "ros_message",
    "examples",
]

[patch.crates-io]
"rosrust" = { path = "rosrust" }
"rosrust_codegen" = { path = "rosrust_codegen" }
"rosrust_codegen_internal" = { path = "rosrust_codegen_internal" }
"rosrust_msg" = { path = "rosrust_msg" }
"rosrust_actionlib" = { path = "rosrust_actionlib" }
"rosrust_diagnostics" = { path = "rosrust_diagnostics" }
"rosrust_rospack" = { path = "rosrust_rospack" }
"ros_message" = { path = "ros_message" }
"examples" = { path = "examples" }
