[package]
name = "rosrust_rospack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rospack"
path = "src/main.rs"

[lib]
name = "rosrust_rospack"
path = "src/lib.rs"

[dependencies]
xml-rs = "0.8"
clap = { version = "3.1", features = ["derive"] }

[[test]]
name = "package_search"
src = "tests/package_search.rs"